Fix mobile padding overlap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1739,7 +1739,7 @@ body.is-preload #header .content .inner {
 @media screen and (max-width: 736px) {
 
 	#main article {
-		padding: 3.5rem 2rem 0.5rem 2rem;
+		padding: 7.5rem 2rem 0.5rem 2rem;
 	}
 
 	#main article .close:before {
@@ -1755,7 +1755,7 @@ body.is-preload #header .content .inner {
 @media screen and (max-width: 480px) {
 
 	#main article {
-		padding: 3rem 1.5rem 0.5rem 1.5rem;
+		padding: 7.5rem 1.5rem 0.5rem 1.5rem;
 	}
 
 }
